# RM_ArmorDetect

./: CMakeLists.txt  ProjLog.md  ProjectRequirement.txt  README.md  main.cpp
include/: ArmorDescriptor.hpp  ArmorDetector.hpp  Center.hpp  LightDescriptor.hpp  Parameter.hpp  TEMP.h  function.hpp  tool.hpp
src/: ArmorDescriptor.cpp  Center.cpp  LightDescriptor.cpp  Parameter.cpp  TEMP.cpp  function.cpp  tool.cpp
